# python-event-processing

./: Makefile  README.rst  pyproject.toml
src/event_processing/: __init__.py
src/event_processing/domain/: account_events.py  account_model.py  model.py
src/event_processing/service/: __init__.py  account.py  account_handlers.py  user.py
tests/: test_event_processing.py
