[tool.poetry]
name = "event-processing"
version = "0.1.0"
description = ""
authors = ["Joachim Bargsten <jw@bargsten.org>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
black = "^21.9b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110
